--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -219,9 +219,21 @@ strong {
 }
 
 :host ::ng-deep .carousel-indicators.ng-star-inserted {
-    box-shadow: 0 1px 3px 0 #f44336, 0 1px 1px 0 #f44336, 0 2px 1px -1px #f44336;
     overflow: visible;
     height: 40px;
-    border-radius: 100px;
     left: 35%;
 }
+:host ::ng-deep ::placeholder {
+    color: black;
+    opacity: 0.8; /* Firefox */
+  }
+  
+  :host ::ng-deep :-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: black;
+   opacity: 0.8;
+  }
+  
+  :host ::ng-deep ::-ms-input-placeholder { /* Microsoft Edge */
+   color: black;
+   opacity: 0.8;
+  }
