--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,7 +6,7 @@
                     <h4 class="sf_title">Contacts</h4>
                     <ul>
                         <li>Dassasgho sect 43 Ouagadougou, Burkina Faso</li>
-                        <li>(+221) 77 602 34 83 <br> (+226) 71 85 17 70</li>
+                        <li> (+226) 71 85 17 70<br> (+221) 77 602 34 83 </li>
                         <li>contact@referencentic.com</li>
                     </ul>
                 </div>
@@ -24,7 +24,7 @@
             </div> <!--  End Col -->
           
             
-            <div class="col-md-3 col-sm-6">
+            <!-- <div class="col-md-3 col-sm-6">
                 <div class="single_ftr">
                     <h4 class="sf_title">Newsletter</h4>
                     <div class="newsletter_form">
@@ -35,7 +35,7 @@
                         </form>
                     </div>
                 </div>
-            </div> <!--  End Col -->
+            </div>  End Col -->
             
         </div>
     </div>
