--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -133,8 +133,8 @@
           </div>
           <div class="download"> 
             <a ></a>
-            <img src = 'https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/categories%2Fandroid.png?alt=media&token=565ba874-56e9-4e08-b846-3526ef060efa' alt="application mobile" srcset="">
-            <!--<img src="" alt="commande en ligne" srcset=""> !-->
+            <!--<img src = 'https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/categories%2Fandroid.png?alt=media&token=565ba874-56e9-4e08-b846-3526ef060efa' alt="application mobile" srcset="">
+            <img src="" alt="commande en ligne" srcset=""> !-->
           </div>
         </div>
         <div class="col-md-6 mobile">
