notification part juste deploy funtion to be 100%

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
           <a mat-button  [routerLink]="['my-order']" *ngIf="isUser"> 
           Mes commandes 
           </a> 
-          <a mat-button  [routerLink]="['sign-up']" *ngIf="currentUser === null"> 
+          <a mat-button  [routerLink]="['sign-in']" *ngIf="currentUser === null"> 
           Se connecter 
           </a> 
           <a mat-button  [routerLink]="['about']" *ngIf="currentUser === null"> 
