notification by http

--- a/src/app/components/backorder/backorder.component.html
+++ b/src/app/components/backorder/backorder.component.html
@@ -48,7 +48,7 @@
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
       </div>
     </div>
-    <div class="col-md-6" *ngIf="order.customer" id="card">
+    <div class="col-md-6" *ngIf="cardBool" id="card">
       <div class="card shadow-lg p-3 mb-5 bg-black rounded" style="width: 28rem;">
         <div class="card-body">
           <div>
