social icon and bug in back fixed

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -35,25 +35,38 @@
                         </form>
                     </div>
                 </div>
-            </div>  End Col -->
+            </div>  -->
             
         </div>
-    </div>
-
-
-    <div class="ftr_btm_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="ftr_social_icon">
-                        <a href="#" class="fa fa-facebook" ></a>
-                        <a href="#" class="fa fa-instagram"></a>
+        <div class="col-md-3 col-sm-6">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="">
+                            <a href="https://www.facebook.com/R%C3%A9f%C3%A9rence-NTIC-100377791758264">
+                                <span class="material-icons fb">
+                                facebook
+                                </span>
+                            </a>
+                            <a href="https://www.instagram.com/accounts/login/?next=/reference_ntic/%3Figshid%3D1xrpsuyz3m15z" class="fa fa-instagram">
+                                <span class="material-icons">
+                                    instagram
+                                    </span>
+                            </a>
+                            <a href="https://wa.me/22672005894" class="fa fa-whatsapp">
+                                <span class="material-icons">
+                                    whatsapp
+                                </span>
+                            </a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-8">
-                    <p class="copyright_text text-center">© 2019 All Rights Reserved</p>
+                    <div class="col-sm-8">
+                        <p class="copyright_text text-center">© 2019 All Rights Reserved</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 </footer>
