social icon and bug in back fixed

--- a/src/app/components/progess-bar-modal/progess-bar-modal.component.html
+++ b/src/app/components/progess-bar-modal/progess-bar-modal.component.html
@@ -4,6 +4,7 @@
 <app-progress-bar [thirdStep] = 'thirdStep' [fourth] = 'fourth' [secondStep] = 'secondStep' [firstStep] = 'firstStep' ></app-progress-bar>
 <div class="">
     <div mat-dialog-content>
+        Activez la notification si vous ne l'avez pas encore fait pour profiter des infos en temps réel de votre commande
     </div>
     <div class="div-btn" >
         <button class="back-btn" mat-button [mat-dialog-close]="" cdkFocusInitial>Retour</button>
