--- a/src/app/components/shopping-page/shopping-page.component.html
+++ b/src/app/components/shopping-page/shopping-page.component.html
@@ -11,8 +11,8 @@
           <!-- Cost Column -->
           <ng-container matColumnDef="cost">
             <th mat-header-cell *matHeaderCellDef> Prix </th>
-            <td mat-cell *matCellDef="let food"> {{food.price }} CFA </td>
-            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() }} CFA </td>
+            <td mat-cell *matCellDef="let food"> {{food.price }} F </td>
+            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() }} F </td>
           </ng-container>
         
           <!-- Cost Column -->
