--- a/src/app/components/shop-cart-modal/shop-cart.component.html
+++ b/src/app/components/shop-cart-modal/shop-cart.component.html
@@ -16,7 +16,7 @@
             
             <div class="col-md-6">
                 <h1 class="food-name">Nom: {{ food.name  }} </h1>
-                <h3 class="food-price" >Prix: {{ food.price  }} CFA</h3>
+                <h3 class="food-price" >Prix: {{ food.price | calcualate  }} CFA</h3>
                 <h4 class="food-description">Description: {{ food.description  }}</h4>
                 <h4 class="food-resto">Restaurant: {{ food.restaurant  }}</h4>
                 <div class="quantity">
