--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -16,7 +16,6 @@
                 <div class="single_ftr">
                     <h4 class="sf_title">Information</h4>
                     <ul>
-                        <li><a href="#">Information livraison</a></li>
                         <li><a [routerLink]="['/private-policy']">Politique de confidentialité</a></li>
                         <li><a [routerLink]="['/term']">Termes & Conditions</a></li>
                     </ul>
@@ -41,7 +40,7 @@
         <div class="col-md-3 col-sm-6">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-4">
+                    <!-- <div class="col-sm-4">
                         <div class="">
                             <a href="https://www.facebook.com/R%C3%A9f%C3%A9rence-NTIC-100377791758264">
                                 <span class="material-icons fb">
@@ -59,7 +58,7 @@
                                 </span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="col-sm-8">
                         <p class="copyright_text text-center">© 2019 All Rights Reserved</p>
                     </div>
