--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -60,7 +60,7 @@
           </mat-carousel-slide>
           <mat-carousel-slide
             #matCarouselSlide
-            image='https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Fmain1.png?alt=media&token=80e26f03-a7b3-43bb-82df-0c88298d2a75'
+            image='https://firebasestorage.googleapis.com/v0/b/flutterfoodapp-aa0df.appspot.com/o/partenaire%2Fstep.png?alt=media&token=4d44c4ab-e7fc-4b8f-a6a7-859e2ac58315'
             overlayColor="#00000040"
             [hideOverlay]="false"
           >
