shopping table display bug fix

--- a/src/app/components/shopping-page/shopping-page.component.html
+++ b/src/app/components/shopping-page/shopping-page.component.html
@@ -1,4 +1,4 @@
-<div class="container" *ngIf="tab.length>0">
+<div class="container" *ngIf="displayTable">
     <div class="example-container mat-elevation-z2">
         <table mat-table [dataSource]="list" >
           <!-- Item Column -->
