--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -32,7 +32,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
         <td mat-cell *matCellDef="let row" > 
           <button mat-raised-button (click)="updateFood(row)" class="modify">
-            <span class="material-icons">
+            <span class="material-icons update">
               create
             </span>
           </button>
