--- a/src/app/components/shopping-page/shopping-page.component.html
+++ b/src/app/components/shopping-page/shopping-page.component.html
@@ -46,7 +46,7 @@
         <button mat-raised-button color="warn" (click)="checkout()" > Payer </button>
     </div>
 </div>
-<div class="container" *ngIf="tab.length==0">
+<div class="container" *ngIf="displayTable">
     <div class="example-container mat-elevation-z2">
       <h1 class="text-center">Votre panier est vide</h1>
     </div>
