resto can't get location

--- a/src/app/components/backorder/backorder.component.html
+++ b/src/app/components/backorder/backorder.component.html
@@ -32,11 +32,11 @@
                 <mat-icon class="material-icons" color="warn">
                 visibility
                 </mat-icon></button>
-              <button mat-button (click)="openDialogLocation(row.clientLocation)" color="primary">
+              <!--<button mat-button (click)="openDialogLocation(row.clientLocation)" color="primary">
                 <mat-icon class="material-icons contact" color="warn">
                   location_on
                 </mat-icon>
-              </button>  
+              </button>!-->
             </td>
           </ng-container>
       
