--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -96,7 +96,7 @@
         </ng-template>
       </div>
     </div>
-    <div class="presentation" *ngIf="!checkSearchText" >
+    <div class="presentation" *ngIf="false" >
       <div class="offre">
         <div ><h3 class="speciale">Offres spéciales</h3></div>
         <div  class="fast-food row">
@@ -115,7 +115,7 @@
       </div>
     </div>
     <div class="result">
-      <div  class="fast-food row" *ngIf="checkSearchText" >
+      <div  class="fast-food row" *ngIf="true" >
         <div  *ngFor="let item of foods | foodFilter: searchText" class="col-md-3">
           <app-food-card [item] = "item"></app-food-card>
         </div>  
