great display of category in mobile

--- a/src/app/components/food-card/food-card.component.html
+++ b/src/app/components/food-card/food-card.component.html
@@ -6,11 +6,11 @@
       </a>
     </div>
     <div class="card-content">
-      <span class="card-title">{{ item.name }}</span>
+      <span class="card-title truncate">{{ item.name }}</span>
       <div class="truncate " > {{ item.description }} </div>
     </div>
     <div class="card-action">
-      <span class="left-align"><i>{{ item.restaurant }}</i></span>
+      <span class="left-align truncate"><i>{{ item.restaurant }}</i></span>
       <span class="right-align">{{ item.price | calcualate }} F</span>
     </div>
 </div>
