--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -198,6 +198,9 @@ strong {
     .category {
         display: none;
     }
+    .mobile-category{
+        display: block;
+    }
     .container {
         padding-right: 15px;
         padding-left: 15px;
@@ -207,10 +210,16 @@ strong {
     .category {
         display: none;
     }
+    .mobile-category{
+        display: block;
+    }
 }
 @media all and ( min-width:768px )  {
     .category {
         display: block;
+    }
+    .mobile-category{
+        display: none;
     }
     .container {
         padding-right: 0px;
@@ -237,3 +246,8 @@ strong {
    color: black;
    opacity: 0.8;
   }
+
+  .row.mobile-category-row {
+    background-color: white;
+    border-radius: 10px;
+}
