--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,6 +26,7 @@
               
           </div>
         </div>
+        
     </div>
     <div class="col-md-8">
       <div class="carde border-dark">
@@ -69,6 +70,19 @@
       </div>
     </div>
     </div>
+    <div class=" mobile-category app flex-row align-items-center">  
+          <div class="row mobile-category-row">
+              <div class="col-md-2 col-3 col-sm-3" *ngFor="let item of categories" (click)="getNotificaton(item)">
+                <div class="row justify-content-center">
+                  <img [lazyLoad]="item.image"
+                  alt="food" class="rounded-circle img-fluid">
+                </div>
+                <div class="row justify-content-center">
+                  <span> {{item.name}} </span>
+                </div>
+              </div>
+          </div>
+  </div>
     <div class="search-box row">
       <div class="ng-autocomplete complete-box">
         <ng-autocomplete
