tele notification error fixed

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -25,7 +25,7 @@
           <a mat-button  [routerLink]="['about']" *ngIf="currentUser === null"> 
           A propos
           </a> 
-          <a mat-button  [routerLink]="['food']" *ngIf="isResto"> 
+          <a mat-button  [routerLink]="['food']" *ngIf="isResto || isAdmin"> 
           Mes plats 
           </a> 
           <a mat-button  [routerLink]="['order/deliverer']" *ngIf="isDeliver || isAdmin"> 
