--- a/src/app/components/shop-cart-modal/shop-cart.component.html
+++ b/src/app/components/shop-cart-modal/shop-cart.component.html
@@ -2,6 +2,9 @@
     <div mat-dialog-content>
         <div class="row">
             <div class="col-md-6">
+                <div class="preorder" color="warn" *ngIf="food.category==='Vennoiserie'" >
+                    Nb: ce plat est uniquement disponible sur précommande !!!
+                </div>
                 <div class="card-image">
                     <img class="shop-cart-img" src="{{ food.imagePath }}">
                 </div>
